# crs-compiler

./: .gitignore  Cargo.toml  README.md  TODO.md  book.toml  lexer_integration_test.sh  output.asm  source_example.txt
assembler/moon/: moon
diagrams/lexer/: lexer_dfa.xml
docs/rendered/: 1-overview.html  2-lexer.html  3-parser.html  4-sdt-and-ast-generation.html  4-semantic-analysis.html  5-semantic-analysis.html  index.html  print.html  searchindex.js
docs/src/: 1-overview.md  2-lexer.md  3-parser.md  4-sdt-and-ast-generation.md  4-semantic-analysis.md  5-semantic-analysis.md  SUMMARY.md  temp.md
src/: main.rs
src/args/: args.rs  mod.rs
src/ast/: action.rs  ast.rs  mod.rs
src/codegen/: codegen_visitor.rs  controller.rs  memsize_visitor.rs  mod.rs
src/lexer/: lexer.rs  mod.rs  state_transition.rs  token.rs
src/output/: error.rs  log.rs  mod.rs  source_line.rs
src/parser/: mod.rs  symbol.rs  table.rs
src/semantic/: action.rs  controller.rs  mod.rs  stack.rs  symbol_table.rs  symbol_table_visitor.rs  type_checker.rs  type_checker_visitor.rs
src/util/: mod.rs  stack.rs
tests/codegen/: codegen_integration_test.sh  source_example.crs
tests/codegen/source_files/: arrays_of_integers.crs  arrays_of_objects.crs  arrays_of_objects_with_inheritance.crs  arrays_of_objects_with_inheritance_and_object_members.crs  arrays_of_objects_with_object_members.crs  integer.crs  object.crs  object_with_inheritance.crs  object_with_object_member.crs  (+1 more)
tests/lexer/: lexer_integration_test.sh  source_example.crs
tests/typecheck/: typecheck_integration_test.sh
(+39 files in other folders)
