[package]
name = "crs"
version = "0.1.0"
authors = ["Lance Lafontaine <lancelafontaine@protonmail.com>"]
publish = false

[dependencies]
ropey = "0.6.2"
clap = "2.29.2"
colored = "1.6.0"
lazy_static = "0.1.16"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
